[gd_scene load_steps=75 format=2]

[ext_resource path="res://art/sprites/characters/enemies/Wizard/wizard_shoot.png" type="Texture" id=2]
[ext_resource path="res://art/sprites/characters/enemies/Wizard/wizard_death.png" type="Texture" id=3]
[ext_resource path="res://scripts/Boss_Sprite.gd" type="Script" id=4]
[ext_resource path="res://art/Miscellaneous/shadow.png" type="Texture" id=5]
[ext_resource path="res://art/audio/music/SpeedQuest - (BOSS 1).wav" type="AudioStream" id=6]
[ext_resource path="res://scripts/Stair.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Wizard_Boss.gd" type="Script" id=8]
[ext_resource path="res://art/sprites/characters/enemies/Wizard/wizard_dash.png" type="Texture" id=9]
[ext_resource path="res://art/sprites/characters/enemies/Wizard/wizard_fire.png" type="Texture" id=10]
[ext_resource path="res://scenes/Projectile.tscn" type="PackedScene" id=14]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit2.wav" type="AudioStream" id=18]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit1.wav" type="AudioStream" id=19]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit3.wav" type="AudioStream" id=20]
[ext_resource path="res://art/audio/sfx/Hit (Taking Damage)/hit4.wav" type="AudioStream" id=21]
[ext_resource path="res://EnemyAudio.gd" type="Script" id=22]
[ext_resource path="res://scripts/PlayerRB.gd" type="Script" id=27]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.7306
height = 0.0

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 9 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 10 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 10 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 10 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 10 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 10 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 10 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 10 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 10 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 10 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 10 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 10 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 10 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 10 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 80, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "wizard_dashing",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "wizard_dashstart",
"speed": 7.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "wizard_death",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "wizard_fire",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "wizard_firestart",
"speed": 6.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": false,
"name": "wizard_firestop",
"speed": 5.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "wizard_hide",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "wizard_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": false,
"name": "wizard_laserstart",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": false,
"name": "wizard_laserstop",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "wizard_shoot",
"speed": 5.0
} ]

[node name="Boss" type="Node2D" groups=["Enemies"]]
script = ExtResource( 8 )
projectile = ExtResource( 14 )
stair = ExtResource( 7 )

[node name="BossBody" type="RigidBody2D" parent="."]
collision_layer = 162
collision_mask = 162
mode = 3
contacts_reported = 10
contact_monitor = true
script = ExtResource( 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBody"]
position = Vector2( -2, 14.551 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="BossAudio" type="Node2D" parent="BossBody"]
script = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}
hitsounds = [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 21 ) ]

[node name="Sprite" type="AnimatedSprite" parent="BossBody"]
z_index = 5
z_as_relative = false
frames = SubResource( 13 )
animation = "wizard_laserstop"
frame = 5
playing = true
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shadow" type="Sprite" parent="BossBody"]
modulate = Color( 0, 0, 0, 0.627451 )
position = Vector2( -1.5, 30 )
scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 5 )

[node name="Line2D" type="Line2D" parent="."]
z_index = 4096
z_as_relative = false
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_shape_entered" from="BossBody" to="." method="_on_RigidBody2D_body_shape_entered"]
